change app logo

--- a/CarPool_Frontend/public/manifest.json
+++ b/CarPool_Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CarPool",
-  "name": "CarPool Web Application",
+  "short_name": "CarBuddy",
+  "name": "Carbuddy Web Application",
   "icons": [
     {
       "src": "favicon.ico",
